Update config because site is not https (yet)

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: Tokyo Indies
 author: Team Tokyo Indies
 description: Tokyo Indies
-url: https://tokyoindies.com
+url: http://tokyoindies.com
 width: 772
