Update Discord link

--- a/hugo.toml
+++ b/hugo.toml
@@ -27,7 +27,7 @@ url = "https://twitter.com/tokyo_indies"
 
 [[params.ananke_socials]]
 name = "discord"
-url = "https://discord.gg/asobu"
+url = "https://discord.com/invite/NZaHDmUXpM"
 
 [[params.ananke_socials]]
 name = "twitch"
