--- a/hugo.toml
+++ b/hugo.toml
@@ -8,22 +8,26 @@ DefaultContentLanguage = 'ja'
 languageName = '日本語'
 
 [params]
- custom_css = ["indies.css"]
- date_format = ":date_long"
+custom_css = ["indies.css"]
+date_format = ":date_long"
 
 [languages]
-  [languages.ja]
-    contentDir = 'content/ja'
-    languageName = '日本語'
-    weight = 1
-  [languages.en]
-    contentDir = 'content/en'
-    languageName = 'English'
-    weight = 2
+[languages.ja]
+contentDir = 'content/ja'
+languageName = '日本語'
+weight = 1
+[languages.en]
+contentDir = 'content/en'
+languageName = 'English'
+weight = 2
 
 [[params.ananke_socials]]
 name = "twitter"
 url = "https://twitter.com/tokyo_indies"
+
+[[params.ananke_socials]]
+name = "bluesky"
+url = "https://bsky.app/profile/tokyoindies.com"
 
 [[params.ananke_socials]]
 name = "discord"
@@ -34,6 +38,6 @@ name = "twitch"
 url = "https://www.twitch.tv/tokyo_indies"
 
 [markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true
