--- a/hugo.toml
+++ b/hugo.toml
@@ -16,10 +16,15 @@ date_format = ":date_long"
 contentDir = 'content/ja'
 languageName = '日本語'
 weight = 1
+[languages.ja.params]
+images = ["/tokyo-indies-banner.png"]
+
 [languages.en]
 contentDir = 'content/en'
 languageName = 'English'
 weight = 2
+[languages.en.params]
+images = ["/tokyo-indies-banner.png"]
 
 [[params.ananke_socials]]
 name = "twitter"
